--- a/templates/base.html
+++ b/templates/base.html
@@ -1,64 +1,65 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+<head>
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <title>FoodOnline</title>
     <!-- Google Font Family Link Start -->
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700" />
-    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800" />
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Montserrat:400,700"/>
+    <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:400,700,800"/>
     <!-- Google Font Family Link End -->
 
     <!-- CSS -->
-    <link href="{% static 'css/iconmoon.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/style.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/cs-foodbakery-plugin.css' %}" rel="stylesheet" />
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
-    <link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet" />
-    <link href="{% static 'css/custom.css' %}" rel="stylesheet" />
+    <link href="{% static 'css/iconmoon.css' %}" rel="stylesheet"/>
+    <link href="{% static 'css/style.css' %}" rel="stylesheet"/>
+    <link href="{% static 'css/cs-foodbakery-plugin.css' %}" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"/>
+    <link href="{% static 'css/bootstrap-slider.css' %}" rel="stylesheet"/>
+    <link href="{% static 'css/custom.css' %}" rel="stylesheet"/>
 
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+          integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
     <!-- JAVASCRIPT -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="{% static 'js/modernizr.js' %}"></script>
     <script src="{% static 'js/bootstrap.js' %}"></script>
 
-    {% comment %} {% if '/profile/' in request.path %}
-      {% endcomment %}
-      <script src="https://maps.googleapis.com/maps/api/js?key={{ GOOGLE_API_KEY }}&libraries=places&callback=initAutoComplete" async defer></script>
-      {% comment %}
-    {% endif %} {% endcomment %}
+    {% if '/' == request.path or 'profile' in request.path %}
+        <script src="https://maps.googleapis.com/maps/api/js?key={{ GOOGLE_API_KEY }}&libraries=places&callback=initAutoComplete"
+                defer></script>
+    {% endif %}
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="{% static 'js/custom.js' %}"></script>
 
-    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}" />
+    <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.png' %}"/>
 
     <style>
-      body,
-      .main-section p,
-      .mce-content-body p {
-        font: Normal 14px/24px 'Open Sans', sans-serif;
-        letter-spacing: 0px;
-        text-transform: none;
-        color: #515151 !important;
-      }
+        body,
+        .main-section p,
+        .mce-content-body p {
+            font: Normal 14px/24px 'Open Sans', sans-serif;
+            letter-spacing: 0px;
+            text-transform: none;
+            color: #515151 !important;
+        }
     </style>
-  </head>
+</head>
 
-  <body>
-    <!-- Load navbar -->
-    {% include 'includes/navbar.html' %}
+<body>
+<!-- Load navbar -->
+{% include 'includes/navbar.html' %}
 
-    <!-- Load content -->
-    {% block content %}
+<!-- Load content -->
+{% block content %}
 
-    {% endblock %}
+{% endblock %}
 
-    <!-- Load footer -->
-    {% include 'includes/footer.html' %}
-  </body>
+<!-- Load footer -->
+{% include 'includes/footer.html' %}
+</body>
 </html>
