--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,86 +1,98 @@
 {% load static %}
 <!-- Main Wrapper -->
 <div class="wrapper">
-  <!-- Header Start -->
-  <header id="header">
-    <div class="main-header">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
-            <div class="logo">
-              <figure>
-                <a href="{% url 'home' %}" class="light-logo"><img src="{% static 'logo/foodOnlineLogo.png' %}" alt="FoodOnline" width="200" /></a>
-              </figure>
-            </div>
+    <!-- Header Start -->
+    <header id="header">
+        <div class="main-header">
+            <div class="container-fluid">
+                <div class="row">
+                    <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
+                        <div class="logo">
+                            <figure>
+                                <a href="{% url 'home' %}" class="light-logo"><img
+                                        src="{% static 'logo/foodOnlineLogo.png' %}" alt="FoodOnline" width="200"/></a>
+                            </figure>
+                        </div>
 
-            <div class="main-location ml-5">
-              <ul>
-                <li class="location-has-children choose-location">
-                  <form action="#">
-                    <input type="text" value="" name="location" id="location" placeholder="Enter your location" autocomplete="off" />
-                    <span id="foodbakery_radius_location_open" class="foodbakery-radius-location" onclick="getLocation()"><i class="icon-target5"></i></span>
-                  </form>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
-            <div class="login-option">
-              {% if user.is_authenticated %}
-                <a href="{% url 'cart' %}"><i class="fa fa-shopping-cart text-danger" style="font-size: 20px;"></i></a>
-                <span class="badge badge-warning" id="cart_counter" style="border-radius: 50px; position: relative; bottom: 15px; left: -5px;">{{ cart_count }}</span>
-              {% endif %}
+                        <div class="main-location ml-5">
+                            <ul>
+                                <li class="location-has-children choose-location">
+                                    <form action="#">
+                                        <input type="text" value="" name="location" id="location"
+                                               placeholder="Enter your location" autocomplete="off"/>
+                                        <span id="foodbakery_radius_location_open" class="foodbakery-radius-location"
+                                              onclick="getLocation()"><i class="icon-target5"></i></span>
+                                    </form>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12">
+                        <div class="login-option">
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'cart' %}"><i class="fa fa-shopping-cart text-danger"
+                                                              style="font-size: 20px;"></i></a>
+                                <span class="badge badge-warning" id="cart_counter"
+                                      style="border-radius: 50px; position: relative; bottom: 15px; left: -5px;">{{ cart_count }}</span>
+                            {% endif %}
 
-              <a href="{% url 'marketplace' %}" class="btn btn-outline-danger text-uppercase font-weight-bold">Marketplace</a>
-              {% if user.is_authenticated %}
-                <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myAccount' %}">My Account</a>
-                <a class="cs-color cs-popup-joinus-btn login-popup text-danger" href="{% url 'logout' %}">Logout</a>
-              {% else %}
-                <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'login' %}">Login</a> / <span><a href="{% url 'registerUser' %}" class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span><a class="get-start-btn" href="{% url 'registerVendor' %}">Register Restaurant</a>
-              {% endif %}
+                            <a href="{% url 'marketplace' %}"
+                               class="btn btn-outline-danger text-uppercase font-weight-bold">Marketplace</a>
+                            {% if user.is_authenticated %}
+                                <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'myAccount' %}">My
+                                    Account</a>
+                                <a class="cs-color cs-popup-joinus-btn login-popup text-danger"
+                                   href="{% url 'logout' %}">Logout</a>
+                            {% else %}
+                                <a class="cs-color cs-popup-joinus-btn login-popup" href="{% url 'login' %}">Login</a> /
+                                <span><a href="{% url 'registerUser' %}"
+                                         class="cs-color cs-popup-joinus-btn login-popup ml-0">Register</a></span>
+                                <a class="get-start-btn" href="{% url 'registerVendor' %}">Register Restaurant</a>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </header>
-  <!-- Header End -->
+    </header>
+    <!-- Header End -->
 
-  <script>
-    var x = document.getElementById('location')
-    
-    var current_location = sessionStorage.getItem('current_location')
-    if (current_location) {
-      x.value = current_location
-    }
-    
-    function getLocation() {
-      if (navigator.geolocation) {
-        navigator.geolocation.getCurrentPosition(showPosition)
-      } else {
-        x.value = 'Geolocation is not supported by this browser.'
-      }
-    }
-    
-    function showPosition(position) {
-      var latitude = position.coords.latitude
-      var longitude = position.coords.longitude
-    
-      var GOOGLE_API_KEY = '{{ GOOGLE_API_KEY }}'
-      var url = 'https://maps.googleapis.com/maps/api/geocode/json?latlng=' + latitude + ',' + longitude + '&key=' + GOOGLE_API_KEY
-    
-      $.ajax({
-        url: url,
-        type: 'GET',
-        success: function (data) {
-          x.value = data.results[0].formatted_address
-          sessionStorage.setItem('current_location', data.results[0].formatted_address)
-          window.location = '?lat=' + latitude + '&lng=' + longitude
-        },
-        error: function (error) {
-          x.value = 'Error getting location'
+    <script>
+        var x = document.getElementById('location')
+
+        var current_location = sessionStorage.getItem('current_location')
+        if (current_location) {
+            x.value = current_location
         }
-      })
-    }
-  </script>
+
+        function getLocation() {
+            if (navigator.geolocation) {
+                navigator.geolocation.getCurrentPosition(showPosition)
+            } else {
+                x.value = 'Geolocation is not supported by this browser.'
+                console.log('Geolocation is not supported by this browser.')
+            }
+        }
+
+        function showPosition(position) {
+            var latitude = position.coords.latitude
+            var longitude = position.coords.longitude
+
+            var GOOGLE_API_KEY = '{{ GOOGLE_API_KEY }}'
+            var url = 'https://maps.googleapis.com/maps/api/geocode/json?latlng=' + latitude + ',' + longitude + '&key=' + GOOGLE_API_KEY
+
+            $.ajax({
+                url: url,
+                type: 'GET',
+                success: function (data) {
+                    x.value = data.results[0].formatted_address
+                    sessionStorage.setItem('current_location', data.results[0].formatted_address)
+                    window.location = '?lat=' + latitude + '&lng=' + longitude
+                },
+                error: function (error) {
+                    x.value = 'Error getting location'
+                }
+            })
+        }
+    </script>
 </div>
