--- a/templates/includes/v_sidebar.html
+++ b/templates/includes/v_sidebar.html
@@ -12,6 +12,9 @@
       <li class="{% if 'menuBuilder' in request.path %} active {% endif %}" >
         <a href="{% url 'menuBuilder' %}"><i class="icon-menu5"></i>Menu Builder</a>
       </li>
+        <li class="{% if 'openingHours' in request.path %} active {% endif %}" >
+        <a href="{% url 'openingHours' %}"><i class="icon-menu5"></i>Opening Hours</a>
+      </li>
       <li>
         <a href="restaurant-orders.html"><i class="icon-add_shopping_cart"></i>Orders</a>
       </li>
