--- a/templates/marketplace/vendor_detail.html
+++ b/templates/marketplace/vendor_detail.html
@@ -2,154 +2,171 @@
 {% load static %}
 
 {% block content %}
-  <!-- Main Section Start -->
-  <div class="main-section">
-    <div class="page-section restaurant-detail-image-section"
-      style=" background: url(
-      {% if vendor.user_profile.cover_picture %}
-        {{ vendor.user_profile.cover_picture.url }}
-      {% else %}
-        {% static 'images/default-cover.png' %}
-      {% endif %}
-        ) no-repeat scroll 0 0 / cover;">
-      <!-- Container Start -->
-      <div class="container">
-        <!-- Row Start -->
-        <div class="row">
-          <!-- Column Start -->
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="company-info-detail">
-              <div class="company-info">
-                <div class="img-holder">
-                  <figure>
-                    <img src="
-                      {% if vendor.user_profile.profile_picture %}
-                        {{ vendor.user_profile.profile_picture.url }}
-                      {% else %}
-                        {% static 'images/default-profile.png' %}
-                      {% endif %}
-                      "
-                      alt="Profile Picture" />
-                  </figure>
-                </div>
-                <div class="text-holder">
-                  <span class="restaurant-title">{{ vendor.vendor_name }}</span>
-                  <div class="text">
-                    {% if vendor.user_profile.address %}
-                      <i class="icon-location"></i>
-                      <p>{{ vendor.user_profile.address }}</p>
-                    {% endif %}
-                  </div>
-                </div>
-              </div>
-              <div class="delivery-timing reviews-sortby">
-                <ul>
-                  <li>
-                    <a href="#" class="reviews-sortby-active">
-                      <span>Today :</span>
-                      11:00 am - 11:00 pm <i class="icon-chevron-small-down"></i>
-                    </a>
-                    <ul class="delivery-dropdown">
-                      <li>
-                        <a href="#"><span class="opend-day">Monday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00 pm</span></a>
-                      </li>
-                      <li>
-                        <a href="#"><span class="opend-day">Tuesday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00 pm</span></a>
-                      </li>
-                      <li>
-                        <a href="#"><span class="opend-day">Wednesday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00 pm</span></a>
-                      </li>
-                      <li>
-                        <a href="#"><span class="opend-day">Thursday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00 pm</span></a>
-                      </li>
-                      <li>
-                        <a href="#"><span class="opend-day">Friday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00 pm</span></a>
-                      </li>
-                      <li>
-                        <a href="#"><span class="opend-day">Saturday</span> <span class="opend-time"><small>:</small> 11:00 am - 11:00 pm</span></a>
-                      </li>
-                      <li>
-                        <a href="#"><span class="opend-day">Sunday</span> <span class="opend-time close-day"><small>:</small>Closed</span></a>
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <!-- Column End -->
-        </div>
-        <!-- Row End -->
-      </div>
-      <!-- Container End -->
-    </div>
+    <!-- Main Section Start -->
+    <div class="main-section">
+        <div class="page-section restaurant-detail-image-section"
+             style=" background: url(
+                     {% if vendor.user_profile.cover_picture %}
+                         {{ vendor.user_profile.cover_picture.url }}
+                     {% else %}
+                         {% static 'images/default-cover.png' %}
+                     {% endif %}
+                     ) no-repeat scroll 0 0 / cover;">
+            <!-- Container Start -->
+            <div class="container">
+                <!-- Row Start -->
+                <div class="row">
+                    <!-- Column Start -->
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                        <div class="company-info-detail">
+                            <div class="company-info">
+                                <div class="img-holder">
+                                    <figure>
+                                        <img src="
+                                            {% if vendor.user_profile.profile_picture %}
+                                                {{ vendor.user_profile.profile_picture.url }}
+                                            {% else %}
+                                                {% static 'images/default-profile.png' %}
+                                            {% endif %}
+                                        "
+                                             alt="Profile Picture"/>
+                                    </figure>
+                                </div>
+                                <div class="text-holder">
+                                    <span class="restaurant-title">{{ vendor.vendor_name }}
+                                        {% if not vendor.is_open %}
+                                            [Closed]
+                                        {% endif %}
+                                    </span>
+                                    <div class="text">
+                                        {% if vendor.user_profile.address %}
+                                            <i class="icon-location"></i>
+                                            <p>{{ vendor.user_profile.address }}</p>
+                                        {% endif %}
+                                    </div>
+                                </div>
+                            </div>
 
-    <div class="page-section">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 sticky-sidebar">
-            <div class="filter-wrapper">
-              <div class="categories-menu">
-                <h6><i class="icon-restaurant_menu"></i>Categories</h6>
-                <ul class="menu-list">
-                  {% for category in categories %}
-                    <li class="active">
-                      <a href="#" class="menu-category-link">{{ category.name }}</a>
-                    </li>
-                  {% endfor %}
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
-            <div class="tabs-holder horizontal">
-              <ul class="stickynav-tabs nav nav-tabs">
-                <li class="active">
-                  <a data-toggle="tab" href="#home"><i class="icon- icon-room_service"></i>Menu</a>
-                </li>
-              </ul>
-              <div class="tab-content">
-                <div id="home" class="tab-pane in active">
-                  <div class="menu-itam-holder">
-                    <div id="menu-item-list-6272" class="menu-itam-list">
-                      {% for category in categories %}
-                        <div class="element-title" id="menu-category-2">
-                          <h5 class="text-color">{{ category.name }}</h5>
-                          <span>{{ category.description }}</span>
+                            {% if opening_hours %}
+                                <div class="delivery-timing reviews-sortby">
+                                    <ul>
+                                        <li>
+                                            <a href="#" class="reviews-sortby-active">
+                                                <span>Today :</span>
+                                                {% for current_opening_hour in current_opening_hours %}
+                                                    <span>
+                                                    {% if current_opening_hour.is_closed %}
+                                                        Closed
+                                                    {% else %}
+                                                        {{ current_opening_hour.from_hour }} -
+                                                        {{ current_opening_hour.to_hour }}
+                                                    {% endif %}
+                                                    </span>
+                                                {% endfor %}
+                                                <i class="icon-chevron-small-down"></i>
+                                            </a>
+                                            <ul class="delivery-dropdown">
+                                                {% for opening_hour in opening_hours %}
+                                                    <li>
+                                                        <a href="#"><span class="opend-day">{{ opening_hour }}</span>
+                                                            <span class="opend-time"><small>:</small>
+                                                                {% if opening_hour.is_closed %}
+                                                                    Closed
+                                                                {% else %}
+                                                                    {{ opening_hour.from_hour }} -
+                                                                    {{ opening_hour.to_hour }}
+                                                                {% endif %}
+                                                            </span></a>
+                                                    </li>
+                                                {% endfor %}
+                                            </ul>
+                                        </li>
+                                    </ul>
+                                </div>
+                            {% endif %}
                         </div>
-                        <ul>
-                          {% for food_item in category.fooditems.all %}
-                            <li>
-                              <div class="image-holder">
-                                <img src="{{ food_item.image.url }}" alt="" />
-                              </div>
-                              <div class="text-holder">
-                                <h6>{{ food_item }}</h6>
-                                <span>{{ food_item.description }}</span>
-                              </div>
-                              <div class="price-holder">
-                                <span class="price">${{ food_item.price }}</span>
-                                <a href="#" class="decrease_cart" data-id="{{ food_item.id }}" data-url="{% url 'decrease_cart' food_item.id %}" style="margin-right: 28px;"><i class="icon-minus text-color"></i></a>
-                                <label id="qty-{{ food_item.id }}">0</label>
-                                <a href="#" class="add_to_cart" data-id="{{ food_item.id }}" data-url="{% url 'add_to_cart' food_item.id %}"><i class="icon-plus4 text-color"></i></a>
-                              </div>
-                            </li>
-                          {% endfor %}
-                        </ul>
-                      {% endfor %}
                     </div>
-
-                    {% for item in cart_items %}
-                      <span id="qty-{{ item.food_item.id }}" class="item_qty d-none" data-qty="{{ item.quantity }}">{{ item.quantity }}</span>
-                    {% endfor %}
-                  </div>
+                    <!-- Column End -->
                 </div>
-              </div>
+                <!-- Row End -->
             </div>
-          </div>
+            <!-- Container End -->
         </div>
-      </div>
+
+        <div class="page-section">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-3 col-md-3 col-sm-4 col-xs-12 sticky-sidebar">
+                        <div class="filter-wrapper">
+                            <div class="categories-menu">
+                                <h6><i class="icon-restaurant_menu"></i>Categories</h6>
+                                <ul class="menu-list">
+                                    {% for category in categories %}
+                                        <li class="active">
+                                            <a href="#" class="menu-category-link">{{ category.name }}</a>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-9 col-md-9 col-sm-8 col-xs-12">
+                        <div class="tabs-holder horizontal">
+                            <ul class="stickynav-tabs nav nav-tabs">
+                                <li class="active">
+                                    <a data-toggle="tab" href="#home"><i class="icon- icon-room_service"></i>Menu</a>
+                                </li>
+                            </ul>
+                            <div class="tab-content">
+                                <div id="home" class="tab-pane in active">
+                                    <div class="menu-itam-holder">
+                                        <div id="menu-item-list-6272" class="menu-itam-list">
+                                            {% for category in categories %}
+                                                <div class="element-title" id="menu-category-2">
+                                                    <h5 class="text-color">{{ category.name }}</h5>
+                                                    <span>{{ category.description }}</span>
+                                                </div>
+                                                <ul>
+                                                    {% for food_item in category.fooditems.all %}
+                                                        <li>
+                                                            <div class="image-holder">
+                                                                <img src="{{ food_item.image.url }}" alt=""/>
+                                                            </div>
+                                                            <div class="text-holder">
+                                                                <h6>{{ food_item }}</h6>
+                                                                <span>{{ food_item.description }}</span>
+                                                            </div>
+                                                            <div class="price-holder">
+                                                                <span class="price">${{ food_item.price }}</span>
+                                                                <a href="#" class="decrease_cart"
+                                                                   data-id="{{ food_item.id }}"
+                                                                   data-url="{% url 'decrease_cart' food_item.id %}"
+                                                                   style="margin-right: 28px;"><i
+                                                                        class="icon-minus text-color"></i></a>
+                                                                <label id="qty-{{ food_item.id }}">0</label>
+                                                                <a href="#" class="add_to_cart"
+                                                                   data-id="{{ food_item.id }}"
+                                                                   data-url="{% url 'add_to_cart' food_item.id %}"><i
+                                                                        class="icon-plus4 text-color"></i></a>
+                                                            </div>
+                                                        </li>
+                                                    {% endfor %}
+                                                </ul>
+                                            {% endfor %}
+                                        </div>
+
+                                        {% for item in cart_items %}
+                                            <span id="qty-{{ item.food_item.id }}" class="item_qty d-none"
+                                                  data-qty="{{ item.quantity }}">{{ item.quantity }}</span>
+                                        {% endfor %}
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
-  <!-- Main Section End -->
+    <!-- Main Section End -->
 {% endblock %}
